--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,19 @@
-.example-icon {
-    padding: 0 14px;
-}
 
-.example-spacer {
-    flex: 1 1 auto;
-}
-
-:host-context(.row) div {
-    background: #000 !important;
+.example-container {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    border: 1px solid rgba(0, 0, 0, 0.5);
   }
-
-:host {
-    background: #000;
-}
+  
+  .example-sidenav-content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .example-sidenav {
+    padding: 20px;
+  }
+  
